# vcpkg-qt5-qml-bug

./: CMakeLists.txt  README.md
src/: main.cpp
